# workdir

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  SETUP.md  roadmap.md
.claude/: launch.json
.github/workflows/: ci.yml
cloud/src/: views.ts
crates/guest-agent/: Cargo.toml
crates/guest-agent/src/: main.rs
crates/sandboxd/: Cargo.toml
crates/sandboxd/src/: app.rs  auth.rs  background.rs  bench.rs  builder.rs  capacity.rs  catalog.rs  config.rs  config_example.rs  egress.rs  error.rs  hotpool.rs  ids.rs  images.rs  knobs.rs  lib.rs  lifecycle.rs  main.rs  model.rs  node.rs  nodes.rs  pricing.rs  remote.rs  scheduler.rs  secrets.rs  service.rs  state.rs  store.rs  usage.rs  views.rs
crates/sandboxd/src/api/: admin.rs  images.rs  internal.rs  mod.rs  nodes.rs  preview.rs  pty.rs  sandboxes.rs  secrets.rs  usage.rs  volumes.rs
crates/sandboxd/src/runtime/: firecracker.rs  mock.rs  mod.rs  workspace.rs
crates/sandboxd/tests/: integration.rs
deploy/: config.example.toml  install.sh  provision-node.sh  watchdog.sh
deploy/backup/: setup-backups.sh
deploy/images/base/: sandbox-init
deploy/images/browser/: Dockerfile  sandbox-init
deploy/nftables/: sandbox-nat.nft
deploy/systemd/: sandboxd.service  workdir-watchdog.service  workdir-watchdog.timer  workdir.service
docs/: API.md  ARCHITECTURE.md  DEPLOY.md  FEATURES.md  REVIEW.md  RUNBOOK.md
examples/: browser_create.sh  feature_tour.py  quickstart_dev.sh  serve_lan.sh
sdk/python/: README.md  pyproject.toml  sandbox_sdk.py
sdk/python/src/workdir/: __init__.py
sdk/typescript/: README.md  sandbox.ts
sdk/typescript/src/: index.ts
