[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mv37-workdir"
version = "0.1.1"
description = "Python SDK for workdir"
readme = "README.md"
requires-python = ">=3.9"
license = "AGPL-3.0-only"
authors = [
  { name = "mv37" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Typing :: Typed"
]

[project.urls]
Homepage = "https://workdir.dev"
Repository = "https://github.com/mv37-org/workdir"
Issues = "https://github.com/mv37-org/workdir/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/workdir"]
